--- a/rockPaperScisors/rockPaperScisors.vcxproj
+++ b/rockPaperScisors/rockPaperScisors.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A92F7EA0-3EBE-4CEA-AF22-778F69359C35}</ProjectGuid>
-    <RootNamespace>Project3</RootNamespace>
+    <ProjectGuid>{66EFB448-C954-45F5-A686-C4C223D5B0C1}</ProjectGuid>
+    <RootNamespace>rockPaperScisors</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
